refactor: 이미지 다중 처리를 CompletableFuture로 병렬처리